[tool.poetry]
name = "talk_booking"
version = "0.1.0"
description = ""
authors = ["Justin Malloy <9146678+BrickFrog@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
black = "^21.5b2"
isort = "^5.8.0"
flake8 = "^3.9.2"
bandit = "^1.7.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
